fix the story card gap for the responsive mobile device

--- a/style.css/style.css
+++ b/style.css/style.css
@@ -585,6 +585,9 @@ marquee{
     .story_card_one{
         display: none;
     }
+    .stroy_card_two {
+        gap: 10px;
+    }
     .left_story_image img{
         width: 100%;
     }
